# linkedin-scrapper

./: .gitignore  LICENSE  docker-compose.yml  package.json
backend/: .repomixignore  AGENTS.md  Dockerfile  SWAGGER_BLUEPRINT_INVENTORY.md  alembic.ini  app.py  pyproject.toml  remove_comments.py  repomix.config.json  run_description_backfill.py  sync_cookies.py
backend/controllers/: curls.py  job_controller.py  job_curls.py  job_curls_controller.py  job_data.py  profile_controller.py  resume_data.py  services_controller.py
backend/database/: database_connection.py  database_erase.py  database_interface.py  extensions.py  populator.py  sqlite_handler.py
backend/docs/: summary.md
backend/docs/superpowers/specs/: 2026-04-03-auth-failure-detection-design.md
backend/exceptions/: service_exceptions.py
backend/factory/: core_instances.py
backend/linkedin/api_fetch/: orchestrator.py
backend/linkedin/api_fetch/orchestration_curls/: orchestration_parser.py
backend/linkedin/api_fetch/pagination/: pagination_recommended_jobs.py
backend/linkedin/api_fetch/single_job/: fetch_single_job_details.py  structure_single_job.py
backend/linkedin/website_scrappers/: applied_jobs_scrapper.py  connection_links_scrapper.py  engine.py  friends_scrapper.py
backend/linkedin_api/data_fetching/: curl_commands.py  curl_txt_reader.py
backend/linkedin_api/data_fetching/pagination/: pagination_recommended_jobs.py
backend/linkedin_api/data_fetching/single_job/: structure_single_job.py
backend/linkedin_api/entities/: orchestrator.py
backend/linkedin_api/entities/new_approach/: fetch_single_job_details.py  orchestrator.py
backend/linkedin_api/entities/orchestration_curls/: orchestration_parser.py
backend/linkedin_api/entities/pagination/: browser_linkedin_filter.txt  pagination_recommended_jobs.py
backend/linkedin_api/entities/recommended_jobs_analysis/: add_extra_fields.py  fetch_recommended_jobs_details.py  recomended_jobs.py
backend/linkedin_scrappers/: applied_jobs_scrapper.py  connection_links_scrapper.py  engine.py  friends_scrapper.py
backend/migrations/: env.py
backend/migrations/versions/: 05ad2c16470a_initial_resume_model.py  1c943a6d163d_create_emails_table.py  48ce6fff2c6a_add_resume_language_to_resume.py  4a6a716788d6_added_education_to_resumes.py  626a22a315aa_add_created_at_and_updated_at_to_jobs.py  6c5e9faa9e4c_added_job_type_and_programming_.py  82690e5e26bc_add_responsibilities_qualifications_.py  8f98f8c1c3fd_add_language_to_job_model.py  932373dfa847_added_summay_and_project_columns.py  a2073fc04587_create_application_status_field.py  a6a14f294a64_add_meta_languages_and_contact_info_to_.py  a8fb55f19551_initial_full_schema.py  b08a2f998bec_initial_migration_with_all_models.py  b17a2c4d9e31_add_improvement_backlog_to_emails.py  b6a9bb8f7dd9_disabled_column_for_jobs.py  c85c2f4331a3_add_enrichment_fields_to_jobs.py  c880687b7ba4_created_profile_table.py  d18d1de191d7_add_premium_metrics_columns.py  d73638ae6e75_cria_modelo_de_connections.py  dcdaadcf801e_added_name_field_to_resume_table.py  dfc1f5497035_added_has_applied_column_do_job_table.py  e9b7cc8d0c6f_included_cookies_field_to_fetchcurl_.py  f7a4b640142e_added_applied_on_field.py  f9cd4ef9e4ca_add_job_urn_to_emails.py  fafef4e9c8de_add_processed_column_to_jobs.py
backend/models/: __init__.py  connection_models.py  email_models.py  fetch_models.py  job_models.py  user_models.py
backend/path/: file_content_loader.py  path_reference.py
backend/repository/: job_repository.py
backend/services/: base_llm_service.py  deepseek_service.py  gemini_service.py  job_prompts.py  model_orchestrator.py  openrouter_service.py
backend/services/constants/: job_description_example.py
backend/services/embeddings/: openai_embeddings.py
backend/services/job_tracking/: huntr_service.py  linkedin_find_timestamp.py  python_linkedin_jobs.py
backend/services/linkedin_calls/: fetch_linkedin_applied_jobs.py  fetch_linkedin_recommended_jobs.py  fetch_linkedin_timestamp.py
backend/services/linkedin_calls/curl_storage/: linkedin_fetch_call_repository.py
backend/services/llms/: chatgpt_service.py  deepseek_service.py  gemini_service.py  openrouter_service.py
backend/services/whatsapp_service/: audio_transcriptor.py  whatsapp_analyzer.py
backend/source/core/: debug_mode.py  http_colorizer.py
backend/source/features/enrich_jobs/: linkedin_http_batch_enricher.py  linkedin_http_job_enricher.py
backend/source/features/fetch_curl/: __init__.py  fetch_controller.py  fetch_parser.py  fetch_router.py  fetch_service.py  linkedin_http_client.py  sdui_curl_parser.py
backend/source/features/friends_connections/: analyze_profile.py  connections_controller.py  connections_router.py  fetch_connections.py  fetch_single_profile.py
backend/source/features/get_applied_jobs/: applied_job_sync_service.py  applied_jobs_controller.py  applied_jobs_livestream_sync_service.py  backfill_old_companies.py  fetch_linkedin_applied_jobs.py  fetch_linkedin_saved_jobs.py  job_tracker_router.py  linkedin_fetch_call_repository.py  linkedin_http_proxy.py  linkedin_proxy.py  new_applied_sync_service.py  new_get_applied_jobs_controller.py  new_get_applied_jobs_service.py  services_controller.py  services_router.py  timestamp_enricher.py  utils_proxy.py
backend/source/integrations/: __init__.py
backend/source/services/: experience_extractor.py
backend/source/utils/: date_parser.py  fetch_utils.py  json_utils.py  metric_utils.py  selenium_utils.py
backend/tests/: conftest.py  linkedin_http_fixtures.py  test_ai_matching.py  test_application_tracking.py  test_config_flow.py  test_curl_endpoints.py  test_job_discovery.py  test_job_scoring_api.py  test_job_scoring_feature.py  test_job_scoring_service.py  test_job_tracker_guardrails.py  test_linkedin_http_contract.py  test_safe_email_reconciliation.py  test_search_pipeline_migration.py  test_search_prefilter.py
backend/utils/: date_parser.py  decorators.py  experience_utils.py  fetch_utils.py  metric_utils.py  node_fetch_conversion.py  selenium_utils.py
docs/: prd.md  (+1 more)
(+276 files in other folders)
