[tool.poetry]
name = "linkedin-backend"
version = "0.1.0"
description = ""
authors = ["Mateus <matbessa12@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

python-dotenv = ">=1.1.1,<2.0.0"
flask = ">=3.1.2,<4.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-migrate = ">=4.1.0,<5.0.0"
flask-cors = ">=6.0.1,<7.0.0"
requests = ">=2.32.5,<3.0.0"
python-dateutil = ">=2.9.0.post0,<3.0.0"
pandas = ">=2.3.2,<3.0.0"
openai = ">=1.109.1,<2.0.0"
repomix = ">=0.3.4,<0.4.0"
werkzeug = ">=3.1.5,<4.0.0"
brotli = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.14.10,<0.15.0"
black = ">=25.12.0,<26.0.0"
mypy = ">=1.19.1,<2.0.0"
pydevd-pycharm = ">=253.28294.336,<253.28295.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
  /(
      \.venv
    | migrations
    | __pycache__
    | \.pytest_cache
  )/
)
'''

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501"]
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "migrations",
]

[tool.ruff.per-file-ignores]
"migrations/**" = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true
